--- a/first-spring-step/src/main/webapp/static/css/index.css
+++ b/first-spring-step/src/main/webapp/static/css/index.css
@@ -258,7 +258,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .copy-right {
     width: 100%;
-    padding: 35px 0;
+    padding: 2rem 0;
     background: #292a30;
 }
 
