--- a/first-spring-step/src/main/webapp/static/css/index.css
+++ b/first-spring-step/src/main/webapp/static/css/index.css
@@ -5,7 +5,7 @@ body > header, body > section, body > footer {
 }
 
 html, body {
-    font-family: Index, "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", sans-serif;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", sans-serif;
 }
 
 @media (max-width: 600px) {
@@ -16,11 +16,6 @@ html, body {
 
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
-}
-
-@font-face {
-    font-family: Index;
-    src: url(../ttf/index.ttf);
 }
 
 .clear {
@@ -135,29 +130,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media (max-width: 600px) {
-    .site-header .h1 {
-        width: 9rem;
-        height: 3rem;
-        margin: 1rem 0;
-    }
-
-    .site-header .logo {
-        display: none;
-    }
-
-    .site-header .search-field {
-        width: 15rem;
-    }
-
-    .site-header .search-box-input {
-        width: 10rem;
-        height: 2rem;
-    }
-
-    .site-header .search-box-input input {
-        width: 10rem;
-    }
-
     .category-all {
         margin-left: -10%;
         margin-right: 0
