--- a/first-spring-step/src/main/webapp/static/css/common.css
+++ b/first-spring-step/src/main/webapp/static/css/common.css
@@ -72,9 +72,19 @@
 
 .site-header .user {
     margin: 1rem 0;
-    font-size: 1.2rem;
+    font-size: 2rem;
     color: #eee;
     float: right;
+}
+
+.site-header .user .login-button {
+    text-decoration: none;
+    color: #ab8051;
+}
+
+.site-header .user .login-button:hover {
+    text-decoration: none;
+    color: #8c8c77;
 }
 
 .site-header .user .photo {
@@ -131,4 +141,30 @@
     color: #fff;;
     line-height: 1rem;
     font-size: 0.7rem;
+}
+
+#back-to-top {
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    background: #284641;
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    z-index: 1;
+    display: none;
+}
+
+#back-to-top:hover {
+    background: #27ae60;
+}
+
+#back-to-top:active {
+    background: #284641;
+}
+
+#back-to-top i {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
 }
