--- a/first-spring-step/src/main/webapp/static/css/common.css
+++ b/first-spring-step/src/main/webapp/static/css/common.css
@@ -58,6 +58,8 @@
     width: 25rem;
     height: 2rem;
     border: none;
+    padding-left: 0.5rem;
+    font-size: 1.2rem;
 }
 
 .site-header .btn-search {
