--- a/first-spring-step/src/main/webapp/static/css/re-product-list.css
+++ b/first-spring-step/src/main/webapp/static/css/re-product-list.css
@@ -17,20 +17,22 @@ h1, h2, h3, h4, h5, h6 {
     clear: both;
 }
 
+.container {
+    padding: 1rem;
+}
+
 .filter-area {
     margin-top: 9rem;
 }
-
 
 .pitch-on p {
     margin: 0.25rem 1rem 0.25rem 0.25rem;
     float: left;
 }
 
-.pitch-on ul{
+.pitch-on ul {
     padding-left: 0;
 }
-
 
 .pitch-on ul {
     list-style-type: none;
@@ -39,7 +41,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .pitch-on ul li {
-    background-color:rgba(149, 118, 78, 0.35);
+    background-color: #528870;
+    border: 3px solid #bcd0c5;
+    color: #fdecd0;
     border-radius: 6px;
     text-align: center;
     margin: 0.25rem 0.5rem;
@@ -50,11 +54,13 @@ h1, h2, h3, h4, h5, h6 {
 .pitch-on ul li span {
     margin: 0.25rem 0 0.25rem 0.25rem;
     cursor: pointer;
-    color: #7b5c41;
+    color: #91bfbf;
 }
 
 .pitch-on div {
     margin: 0.25rem 0 0.25rem 0.25rem;
+    padding: 0.3rem;
+    border: 3px solid #fdecd0;
 }
 
 .pitch-on div input {
@@ -63,8 +69,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .waiting-for-selection {
     width: 79%;
-    border :1px solid #E4E4E4;
+    border: 1px solid #E4E4E4;
     margin: 1rem 0;
+    min-height: 50px;
 }
 
 .waiting-for-selection p {
@@ -74,10 +81,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .waiting-for-selection .param-parent {
-    width: 100%;
     height: 2rem;
     margin: 0.25rem 0;
     border-radius: 5px;
+    float: left;
 }
 
 .waiting-for-selection .param-parent ul {
@@ -87,7 +94,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .waiting-for-selection .param-parent ul li {
-    border: 1px solid black;
+    background-color: #91bfbf;
+    border: 3px solid #fdecd0;
+    color: #528870;
     text-align: center;
     margin: 0.25rem 0;
     padding: 0 0.5rem;
@@ -96,9 +105,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .waiting-for-selection .param-children {
-    width: 100%;
     margin: 0.25rem 0;
     border-radius: 5px;
+    float: left;
 }
 
 .waiting-for-selection .param-children ul {
@@ -108,9 +117,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .waiting-for-selection .param-children ul li {
-    border: 1px solid black;
+    background-color: #91bfbf;
+    border: 3px solid #fdecd0;
+    color: #528870;
+    border-radius: 6px;
     text-align: center;
-    margin: 0.25rem 0;
+    margin: 0.25rem 0.5rem;
     padding: 0 0.5rem;
     float: left;
     cursor: pointer;
