change index css

--- a/first-spring-step/src/main/webapp/static/css/common.css
+++ b/first-spring-step/src/main/webapp/static/css/common.css
@@ -164,6 +164,12 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 0.7rem;
 }
 
+.copy-right #wb {
+    float: right;
+    padding-right: 7rem;
+
+}
+
 #back-to-top {
     position: fixed;
     right: 10px;
