--- a/first-spring-step/src/main/webapp/static/css/re-product-list.css
+++ b/first-spring-step/src/main/webapp/static/css/re-product-list.css
@@ -77,7 +77,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .waiting-for-selection .param-parent {
-    height: 2rem;
+    height: 3rem;
     margin: 0.25rem 0;
     border-radius: 5px;
     float: left;
@@ -95,7 +95,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #528870;
     text-align: center;
     margin: 0.25rem 0;
-    padding: 0 0.5rem;
+    padding: 0.2rem 0.7rem;
     float: left;
     cursor: pointer;
 }
@@ -113,13 +113,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .waiting-for-selection .param-children ul li {
-    background-color: #91bfbf;
-    border: 3px solid #fdecd0;
+    background-color: #fdecd0;
     color: #528870;
     border-radius: 6px;
     text-align: center;
-    margin: 0.25rem 0.5rem;
-    padding: 0 0.5rem;
+    margin: 0.3rem 0.5rem;
+    padding: 0.25rem 0.7rem;
     float: left;
     cursor: pointer;
 }
