--- a/first-spring-step/src/main/webapp/static/css/recipe-edit.css
+++ b/first-spring-step/src/main/webapp/static/css/recipe-edit.css
@@ -14,3 +14,16 @@ html, body {
     margin: 2rem auto;
     padding: 2rem;
 }
+
+#submit{
+    color: #146e32;
+    padding:14px 55px;
+    background-color:rgba(122, 192, 160, 0.47);
+    font-size:16px;
+    margin-left:44%;
+    cursor: pointer;
+}
+
+#submit:hover{
+    background-color: rgba(122, 192, 160, 0.7);
+}
