--- a/first-spring-step/src/main/webapp/static/css/recipe-detail.css
+++ b/first-spring-step/src/main/webapp/static/css/recipe-detail.css
@@ -23,6 +23,11 @@ html, body {
     float: left;
 }
 
+.recipe-header .images img {
+    width: 20rem;
+    height: 30rem;
+}
+
 .recipe-header .params {
     float: left;
 }
@@ -48,4 +53,24 @@ html, body {
     font-size: 14px;
     line-height: 24px;
     color: #666;
+}
+
+.recipe-content .recipe-detail .tables {
+    height: 2rem;
+}
+
+.recipe-content .recipe-detail .tables ul {
+    list-style-type: none;
+}
+
+.recipe-content .recipe-detail .tables ul li {
+    text-align: center;
+    float: left;
+    line-height: 2rem;
+    padding: 0 2rem;
+    color: #bcd0c5;
+    font-size: 1.3rem;
+    font-weight: 700;
+    border: 1px solid black;
+    border-radius: 0 15px 0 0;
 }
