--- a/first-spring-step/src/main/webapp/static/css/common.css
+++ b/first-spring-step/src/main/webapp/static/css/common.css
@@ -170,6 +170,7 @@ header nav ul li {
     color: #bcd0c5;
     font-size: 1.3rem;
     font-weight: 700;
+    cursor: pointer;
 }
 
 header nav ul li:hover {
