--- a/first-spring-step/src/main/webapp/static/css/recipe-detail.css
+++ b/first-spring-step/src/main/webapp/static/css/recipe-detail.css
@@ -75,6 +75,15 @@ html, body {
     border-radius: 0 15px 0 0;
 }
 
-.recipe-content .recipe-detail .comments {
+.comments {
     display: none;
+}
+
+.comment {
+    width: 700px;
+}
+
+.comment img {
+    width: 40px;
+    height: 40px;
 }
