--- a/first-spring-step/src/main/webapp/static/css/product-list.css
+++ b/first-spring-step/src/main/webapp/static/css/product-list.css
@@ -129,28 +129,33 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .recipe {
-    width: 35rem;
-    height: 18rem;
-    margin: 0.5rem;
+    width: 525px;
+    height: 270px;
+    margin: 7px;
     border: 3px solid #fdecd0;
     float: left;
 }
 
 .recipe img {
-    height: 13rem;
-    width: 13rem;
+    height: 200px;
+    width: 200px;
     margin: 0 1rem 1rem 1rem;
     float: left;
 }
 
 .recipe h3 {
-    width: 33rem;
-    margin: 1rem;
+    width: 500px;
+    margin: 15px;
     text-align: center;
     color: #91bfbf;
 }
 
 .recipe p {
-    text-indent: 2rem;
-    margin: 2rem 0;
+    text-indent: 30px;
+    margin: 15px 0;
+    word-break: break-all;
+    display: -webkit-box;
+    -webkit-line-clamp: 9;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
